# puck-server

./: .env  .gitignore  Cargo.toml  README.md  architecture.txt  build.go  build.py  package-lock.json
migrations/: 20221230231501_schema.sql
migrations/2022-12-13-053119_puck/: up.sql
server/: ..gitignore.un~  .gitignore~  Cargo.toml  setup.go  setup.sh
server/src/: main.rs
server/src/auth/: auth.rs
server/src/db/: models.rs
server/src/routes/: get_media.rs  scan.rs  set_password.rs  set_path.rs
server/src/utils/: env_load.rs  main.rs  scanner.rs
src/: .env  lib.rs  main.rs  media.rs  models.rs  schema.rs
src/auth/src/: auth.rs
src/db/: lib.rs  mod.rs  models.rs  schema.rs
src/routes/: get_media.rs  get_media_list.rs  login.rs  logout.rs  mod.rs  register.rs  scan.rs  set_password.rs  set_path.rs  set_pswd.rs
src/utils/: env_load.rs  hash.rs  ip_utils.rs  main.rs  mod.rs  scan.rs  scanner.rs
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx  index.tsx
ui/src/components/: MangaList.tsx  MangaViewer.tsx
