[package]
name = "puck-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.11"
diesel = { version = "2.0.2", features = ["sqlite"] }
rocket-jwt = "0.5.0"
jwt = "0.16.0"
dotenv = "0.15.0"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json"]
