[package]
name = "puck-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.2", features = ["sqlite"] }
dotenv = "0.15.0"
tokio = { version = "1.23.0", features = ["full"]}
serde = "1.0.152"
bcrypt = "0.13.0"
argon2 = "0.4.1"
rand = "0.8.5"

[dependencies.rocket_contrib]
version = "0.4.11"
default-features = false
features = ["databases", "json"]
