[package]
name = "puck-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
# tokio + rustls
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "sqlite" ] }
dotenv = "0.15.0"
tokio = { version = "1.23.0", features = ["full"]}
tracing-subscriber = "0.3.16"
tracing = "0.1.37"
serde = {version = "1.0.152", features = ["derive"]}
bcrypt = "0.13.0"
argon2 = "0.4.1"
rand = "0.8.5"
tower = "0.4.13"
tower-http = {version = "0.3.5", features = ["fs"]}
axum-macros = "0.3.0"
[dependencies.rocket_contrib]
version = "0.4.11"
default-features = false
features = ["databases", "json"]
